# market-pulse-frontend

./: .gitignore  .gitmodules  README.md  TIINGO_MIGRATION.md  index.html  manifest.json  package.json  pnpm-lock.yaml  service-worker.js  vite.config.js
admin/: README.md  index.html  package.json
admin/css/: admin.css  dashboard.css  settings.css  theme-dark.css
admin/js/: admin.js  adminSettings.js  analyticsService.js  chart-theme.js  dashboard.js  settingsPanel.js  theme-switcher.js
docs/: api_usage.md  upstox_integration.md
scripts/: kill_server.sh  start_admin_dashboard.sh  stress_test.sh  test_indices.sh  test_stocks.sh  test_symbols.sh
server/: .gitignore  README.md  index.js  package-lock.json  package.json  pnpm-lock.yaml  seedData.json  server.js
server/data/: nse_symbols_cache.json  symbols.csv  symbols.json
server/routes/: indices.js  symbols.js
server/rust_api/: .env  .env.bak  .env.example  ARCHITECTURE.md  Cargo.toml  README.md
server/rust_api/Users/sandeshwarsharma/Workspace/Projects/market-pulse-v2/server/data/: README.md
server/rust_api/Users/sandeshwarsharma/Workspace/Projects/market-pulse-v2/src/config/: marketIndices.js
server/rust_api/data/: symbols.json  tiingo_stocks.csv
server/rust_api/docs/: indices_integration.md  market_index_providers.md  paytm_integration.md  paytm_testing.md  symbol_cache.md  tiingo_integration.md
server/rust_api/scripts/: README.md  check_api_health.sh  check_redis.sh  fetch_symbols_by_range.sh  find_api_port.sh  generate_paytm_tokens.rs  initialize_symbols.sh  make_scripts_executable.sh  run_api_foreground.sh  start_api.sh  test_market_data_service.rs  test_paytm_rest_api.rs  test_paytm_websocket.rs  test_tiingo_api.rs  test_tiingo_service.rs  test_tiingo_symbols.rs  test_token_generation.rs  update_nse_symbols.sh
server/rust_api/src/: lib.rs  main.rs  state.rs
server/rust_api/src/config/: market_indices.rs  mod.rs
server/rust_api/src/handlers/: analytics.rs  health.rs  indices.rs  market_data.rs  market_index.rs  mod.rs  news.rs  symbol.rs  symbol_cache.rs  upstox_symbols.rs
server/rust_api/src/models/: error.rs  market_data.rs  market_index.rs  mod.rs  news.rs  symbol.rs
server/rust_api/src/services/: indices_market_data.rs  market_data.rs  market_data.rs.new  market_index.rs  mod.rs  news.rs  redis.rs  symbol.rs  symbol_cache.rs  tiingo_market_data.rs  upstox_market_data.rs  upstox_symbols.rs
server/rust_api/src/services/market_data_provider/: mod.rs  paytm.rs  paytm_websocket.rs  tiingo.rs  upstox.rs
server/rust_api/src/services/market_index_provider/: factory.rs  google.rs  mod.rs  provider.rs  wsj.rs
server/rust_api/src/services/news_provider/: mock.rs  mod.rs  tiingo.rs
server/rust_api/src/utils/: analytics.rs  csv.rs  mod.rs
server/scraper/: indexManager.js  indexScraper.js
server/services/: symbolCache.js
server/utils/: csvToJson.js
src/: App.jsx  config.js  main.js  main.jsx  serviceWorkerRegistration.js
src/components/ExpandedPanel/: ExpandedPanel.css  ExpandedPanel.js  NewsPanel.js
src/components/ExpandedPanel/Settings/: AdminCard.css  (+15 more)
src/components/MiniDash/: MiniDash.css  MiniDash.js
src/components/admin/: AdminPage.js  Dashboard.js  README.md
src/components/cards/: NewsCard.js
src/constants/: marketConstants.js
src/services/: MarketDataNewsProvider.interface.js  MarketDataNewsProvider.js  analyticsService.js  indicesWatchlistService.js  marketDataService.js  watchlistService.js
src/services/providers/: MarketDataAppProvider.js  MarketDataProvider.interface.js  MarketDataProvider.js
src/styles/: admin.css  dashboard.css  global.css  news.css  variables.css
src/utils/: badge.js  date.js  dateUtils.js  dom.js  feather.js  formatUtils.js  icons.js  indicesWatchlistUtils.js  marketIndicesUtils.js  marketStatus.js  navigation.js  reactUtils.js  theme.js  thresholds.js  watchlistUtils.js
temp/: diffusion_llm_trainer.py
(+45 files in other folders)
