[package]
name = "market_pulse_api"
version = "0.1.0"
edition = "2025"
description = "High-performance API for Market Pulse application (Chrome extension)"
authors = ["Market Pulse Team - Luminera AI"]

[dependencies]
# Web framework
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Database
redis = { version = "0.24.0", features = ["tokio-comp"] }

# Utilities
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
thiserror = "1.0.50"
csv = "1.3.0"