[package]
name = "market_pulse_api"
version = "0.1.0"
edition = "2021"
description = "High-performance API for Market Pulse application (Chrome extension)"
authors = ["Market Pulse Team - Luminera AI"]

[dependencies]
# Web framework
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Database
redis = { version = "0.24.0", features = ["tokio-comp"] }

# HTTP Client
reqwest = { version = "0.11.22", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.29"
url = "2.4.1"

# Utilities
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
thiserror = "1.0.50"
csv = "1.3.0"
async-trait = "0.1.74"
scraper = "0.18.1"
downcast-rs = "1.2.0"

[[bin]]
name = "generate_paytm_tokens"
path = "scripts/generate_paytm_tokens.rs"

[[bin]]
name = "test_token_generation"
path = "scripts/test_token_generation.rs"

[[bin]]
name = "test_paytm_rest_api"
path = "scripts/test_paytm_rest_api.rs"

[[bin]]
name = "test_paytm_websocket"
path = "scripts/test_paytm_websocket.rs"

[[bin]]
name = "test_market_data_service"
path = "scripts/test_market_data_service.rs"

[[bin]]
name = "test_tiingo_api"
path = "scripts/test_tiingo_api.rs"

[[bin]]
name = "test_tiingo_service"
path = "scripts/test_tiingo_service.rs"