[package]
name = "market_pulse_api"
version = "0.1.0"
edition = "2021"
description = "High-performance API for Market Pulse application (Chrome extension)"
authors = ["Market Pulse Team - Luminera AI"]
default-run = "market_pulse_api"

[dependencies]
# Web framework
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Database
redis = { version = "0.24.0", features = ["tokio-comp"] }

# HTTP Client
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"], default-features = false }
futures-util = "0.3.29"
url = "2.4.1"

# Utilities
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
thiserror = "1.0.50"
csv = "1.3.0"
async-trait = "0.1.74"
scraper = "0.18.1"
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
zip = "0.6.6"
flate2 = "1.0.28"

[[bin]]
name = "test_token_generation"
path = "scripts/test_token_generation.rs"

[[bin]]
name = "test_market_data_service"
path = "scripts/test_market_data_service.rs"

